positioned header and added padding

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header>This is the header.</header>
-    <main>This is the main.</main>
+    <main>This is the main.
+        <img src=".\assets\images\teamrocket.jpg" alt="Team Rocket">
+    </main>
     <footer>This is the footer.</footer>
 </body>
 </html>
