--- a/index.html
+++ b/index.html
@@ -8,9 +8,36 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <header>This is the header.</header>
+    <header>Blasting off again!
+        <div class="pagemenu">
+            <ul>
+                <li>
+                    <a href="#search-engine-optimization" target="_blank">Github</a>
+                </li>
+                <li>
+                    <a href="#online-reputation-management" target="_blank">Portfolio</a>
+                </li>
+                <li>
+                    <a href="#social-media-marketing" target="_blank">Social Media Marketing</a>
+                </li>
+            </ul>
+        </div>
+    </header>
     <main>This is the main.
         <img src=".\assets\images\teamrocket.jpg" alt="Team Rocket">
+        <p>This is a paragraph.</p>
+    
+        <FORM>
+            <P>
+            <LABEL for="firstname">First name: </LABEL>
+                      <INPUT type="text" id="firstname"><BR>
+            <LABEL for="lastname">Last name: </LABEL>
+                      <INPUT type="text" id="lastname"><BR>
+            <LABEL for="email">email: </LABEL>
+                      <INPUT type="text" id="email"><BR>
+            <INPUT type="submit" value="Send"> <INPUT type="reset">
+            </P>
+         </FORM>
     </main>
     <footer>This is the footer.</footer>
 </body>
