adjusts text colors

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             </ul>
         </div>
     </header>
-    <main>This is the main.
-        <img src=".\assets\images\teamrocket.jpg" alt="Team Rocket">
+    <main><p>This is the main.</p>
+        <img src=".\assets\images\teamrocket.jpg" alt="Picture of Team Rocket">
         <p>This is a paragraph.</p>
     
         <FORM>
@@ -33,7 +33,7 @@
                       <INPUT type="text" id="firstname"><BR>
             <LABEL for="lastname">Last name: </LABEL>
                       <INPUT type="text" id="lastname"><BR>
-            <LABEL for="email">email: </LABEL>
+            <LABEL for="email">Email: </LABEL>
                       <INPUT type="text" id="email"><BR>
             <INPUT type="submit" value="Send"> <INPUT type="reset">
             </P>
