--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <img src=".\assets\images\teamrocket.jpg" alt="Picture of Team Rocket">
         <p>This is a paragraph.</p>
     
-        <FORM>
+        <div class="formholder">
+            <FORM class="form">
             <P>
             <LABEL for="firstname">First name: </LABEL>
                       <INPUT type="text" id="firstname"><BR>
@@ -35,9 +36,10 @@
                       <INPUT type="text" id="lastname"><BR>
             <LABEL for="email">Email: </LABEL>
                       <INPUT type="text" id="email"><BR>
-            <INPUT type="submit" value="Send"> <INPUT type="reset">
+            <INPUT type="submit" value="Send">
             </P>
          </FORM>
+        </div>
     </main>
     <footer>This is the footer.</footer>
 </body>
