formats and centers text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <header>Blasting off again!
+    <header>
+        <h1>Blasting off again!</h1>
         <div class="pagemenu">
             <ul>
                 <li>
@@ -18,14 +19,14 @@
                     <a href="#online-reputation-management" target="_blank">Portfolio</a>
                 </li>
                 <li>
-                    <a href="#social-media-marketing" target="_blank">Social Media Marketing</a>
+                    <a href="#social-media-marketing" target="_blank">Contact</a>
                 </li>
             </ul>
         </div>
     </header>
-    <main><p>This is the main.</p>
+    <main><h2>Welcome!</h2>
         <img src=".\assets\images\teamrocket.jpg" alt="Picture of Team Rocket">
-        <p>This is a paragraph.</p>
+        <p>Please provide your contact details below!</p>
     
         <div class="formholder">
             <FORM class="form">
