adds zindex for header and adjusts spacing

--- a/index.html
+++ b/index.html
@@ -13,23 +13,24 @@
         <div class="pagemenu">
             <ul>
                 <li>
-                    <a href="#search-engine-optimization" target="_blank">Github</a>
+                    <a href="https://github.com/branchwag" target="_blank">Github</a>
                 </li>
                 <li>
-                    <a href="#online-reputation-management" target="_blank">Portfolio</a>
+                    <a href="#placeholder" target="_blank">Portfolio</a>
                 </li>
                 <li>
-                    <a href="#social-media-marketing" target="_blank">Contact</a>
+                    <a href="#jumptoform">Contact</a>
                 </li>
             </ul>
         </div>
     </header>
-    <main><h2>Welcome!</h2>
+    <main>
+        <h2>Welcome!</h2>
         <img src=".\assets\images\teamrocket.jpg" alt="Picture of Team Rocket">
         <p>Please provide your contact details below!</p>
     
-        <div class="formholder">
-            <FORM class="form">
+        <div class="formholder" id="jumptoform">
+            <FORM class="form" id="contactform">
             <P>
             <LABEL for="firstname">First name: </LABEL>
                       <INPUT type="text" id="firstname"><BR>
@@ -42,6 +43,10 @@
          </FORM>
         </div>
     </main>
-    <footer>This is the footer.</footer>
+    <footer>
+        <p>
+        &copy; 2023 Awesome Websites Inc.
+    </p>
+</footer>
 </body>
 </html>
