--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <a href="https://github.com/branchwag" target="_blank">Github</a>
                 </li>
                 <li>
-                    <a href="#placeholder" target="_blank">Portfolio</a>
+                    <a href="https://github.com/branchwag/Portfolio" target="_blank">Portfolio</a>
                 </li>
                 <li>
                     <a href="#jumptoform">Contact</a>
